@@ -1,3 +1,6 @@
+* Mon Dec 10 Jesse Keating <jkeating@redhat.com>
+- Use a repoview cache.
+
 * Sat Dec 08 Jesse Keating <jkeating@redhat.com>
 - Use a createrepo cache.
 
